1 차 프로젝트 (비트 코인 웹 사이트 제작 / 로그인시 유저이름 + 로그아웃 메뉴바 내용바꾸기 수정) 3.1 ver.

--- a/1차/web/views/inc/top_navi.ejs
+++ b/1차/web/views/inc/top_navi.ejs
@@ -1,7 +1,13 @@
 <div class="navbar">
   <img src="/img/logo.png" id="logo">
+  
+  <%if(joinUser==undefined){%> 
   <a href="/coin/main">거래소 메인</a>
-  <a href="#">투자내역</a>
+  <%} else{%>
+    <a href="/coin/usermain">거래소 메인</a>
+  <%}%>
+
+  <a href="/coin/main/investment">투자내역</a>
   <a href="#">마이페이지</a>
   <a href="#">게시판</a>
   <div class="dropdown">
@@ -13,7 +19,19 @@
       <a href="#">테트리스</a>
     </div>
   </div> 
-  <a href="/coin/main/loginform" >Login</a>
-  <a href="/coin/main/signupform" >Sign Up</a>
+
+  
+  <%var joinUser;%>
+  <%if(joinUser==undefined){ %>
+
+    <a href="/coin/main/signupform" style="float:right">Sign Up</a>
+    <a href="/coin/main/loginform" style="float:right">Login</a>
+     
+<%} else { %>
+  
+    <a href="/coin/main/logout" style="float:right">Logout</a>
+    <a href="#" style="float:right"><%=joinUser.user_name%></a>
+<%}%>
+
 </div>
 
