--- a/1차/web/views/login.ejs
+++ b/1차/web/views/login.ejs
@@ -10,10 +10,10 @@
         background-color: lightgray;
       }
       form {
+        margin-top: 300px;
         margin: auto;
-        width: 70%;
-        border:1px solid #ccc;
-        background-color: white;
+        width: 500px;
+
       }
       
       input[type=text], input[type=password] {
@@ -25,24 +25,32 @@
         box-sizing: border-box;
       }
       
+      
       button {
-        background-color: #4CAF50;
+        background-color: #0063DD;
         color: white;
         padding: 14px 20px;
         margin: 8px 0;
         border: none;
         cursor: pointer;
         width: 100%;
+
       }
       
       button:hover {
         opacity: 0.8;
       }
-      
+
+      .loginbtn{
+        border-radius: 15px;
+      }
+
       .cancelbtn {
         width: auto;
+        height: auto;
         padding: 10px 18px;
         background-color: #f44336;
+        border-radius: 15px;
       }
       
       .imgcontainer {
@@ -56,7 +64,17 @@
       }
       
       .container {
+        margin-top: 100px;
         padding: 16px;
+        border:1px solid #ccc;
+        background-color: white;
+        border-radius: 20px 20px 0 0;
+      }
+      .container2 {
+        padding: 16px;
+        border:1px solid #ccc;
+        background-color: white;
+        border-radius: 0 0 20px 20px;
       }
       
       span.psw {
@@ -91,20 +109,24 @@
       <!-- 탑 네비게이션 -->
       <%- include('inc/top_navi')%>
 
-<h2>Login</h2>
-
-<form method="post">
-
+      
+<form>
+  
   <div class="container">
-   
+    <img src="/img/logo.png" id="logo" style="float:right">
+    <h2>Login</h2>
     <label for="user_id"><b>ID</b></label>
     <input type="text" placeholder="Enter ID" name="user_id" required>
 
     <label for="user_pass"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="user_pass" required>
 
-    <button onClick="loginCheck()">Login</button>
-    
+    <button class="loginbtn" onclick="loginCheck()">Login</button>
+  </div>
+
+  <div class="container2" style="background-color:#f1f1f1">
+    <button type="button" class="cancelbtn">Cancel</button>
+    <span class="psw">Forgot <a href="#">password?</a></span>
   </div>
 
   
