--- a/1차/web/views/signup.ejs
+++ b/1차/web/views/signup.ejs
@@ -11,25 +11,26 @@
       }
       
       form {
+        margin-top: 300px;
         margin: auto;
-        width: 70%;
+        width: 700px;
         height: 100%;
-        border:1px solid #ccc;
-        background-color:white;
       }
       
       /* Full-width input fields */
       input[type=text], input[type=password] {
-        width: 98%;
+        width: 99%;
         padding: 15px;
         margin: 5px 0 22px 0;
         display: inline-block;
         border: none;
-        background: #f1f1f1;
+        background: white;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
       }
       
       input[type=text]:focus, input[type=password]:focus {
-        background-color: #ddd;
+        background-color: white;
         outline: none;
       }
       
@@ -40,7 +41,7 @@
       
       /* Set a style for all buttons */
       button {
-        background-color: #4CAF50;
+        background-color: #0063DD;
         color: white;
         padding: 14px 20px;
         margin: 8px 0;
@@ -48,6 +49,9 @@
         cursor: pointer;
         width: 100%;
         opacity: 0.9;
+      }
+      .signupbtn{
+        border-radius: 15px;
       }
       
       button:hover {
@@ -60,15 +64,13 @@
         background-color: #f44336;
       }
       
-      /* Float cancel and signup buttons and add an equal width */
-      .cancelbtn, .signupbtn {
-        float: left;
-        width: 50%;
-      }
-      
       /* Add padding to container elements */
       .container {
         padding: 16px;
+        margin-top: 100px;
+        border-radius: 20px;
+        border:1px solid #ccc;
+        background-color: white;
       }
       
       /* Clear floats */
@@ -101,8 +103,9 @@
       <!-- 탑 네비게이션 -->
       <%- include('inc/top_navi')%>
       
-<form style="border:1px solid #ccc">
+<form>
   <div class="container">
+    <img src="/img/logo.png" id="logo" style="float:right">
     <h1>Sign Up</h1>
     <p>Please fill in this form to create an account.</p>
     <hr> 
