비트코인 싸이트 최종 완성본

--- a/1차/web/static/css/navbar-top.css
+++ b/1차/web/static/css/navbar-top.css
@@ -2,9 +2,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+#topnavi_wrapper{
+  background-color: #333;
+}
 .navbar {
   overflow: hidden;
   background-color: #333;
+  width: 80%;
+  margin: auto;
 }
 
 #logo{
