--- a/NemoRecipe/src/main/webapp/resources/client/assets2/css/fresh-bootstrap-table.css
+++ b/NemoRecipe/src/main/webapp/resources/client/assets2/css/fresh-bootstrap-table.css
@@ -38,22 +38,21 @@
   }
 }
 .ranking_title {
-	height: 500px;
-	width: 500px;
+	height: 800px;
+	width: 800px;
 	box-sizing: border-box;
 	object-fit: contain;
 	background-position: center center;
 	background-size: contain;
-	background-image:	url("/resources/client/assets/img/ranking/ranking_noncrop.png");
+	background-image: url("/resources/client/assets/img/ranking/ranking_noncrop.png");
 	margin: 0;
 	padding: 0;
 	border: 0;
 	align-items: center;
-	background-position: center center;
-	position: absolute;
+	position: relative;
 	margin: 0;
 	background-repeat: no-repeat;
-	transform: translateX(-50%);
+	left:15%;
 }
 
 .bootstrap-table .fixed-table-toolbar::after {
@@ -232,7 +231,7 @@
 }
 .bootstrap-table .fixed-table-container .fixed-table-body .fixed-table-loading .loading-wrap .animation-dot,
 .bootstrap-table .fixed-table-container .fixed-table-body .fixed-table-loading .loading-wrap .animation-wrap::after,
-.bootstrap-table .fixed-table-container .fixed-table-body .fixed-table-loading .loading-wrap .animation-wrap::before {
+.bootstrap-table .fixed-table-body .fixed-table-loading .loading-wrap .animation-wrap::before {
   content: "";
   animation-duration: 1.5s;
   animation-iteration-count: infinite;
@@ -256,7 +255,7 @@
 }
 .bootstrap-table .fixed-table-container .fixed-table-body .fixed-table-loading.table-dark .animation-dot,
 .bootstrap-table .fixed-table-container .fixed-table-body .fixed-table-loading.table-dark .animation-wrap::after,
-.bootstrap-table .fixed-table-container .fixed-table-body .fixed-table-loading.table-dark .animation-wrap::before {
+.bootstrap-table .fixed-table-body .fixed-table-loading.table-dark .animation-wrap::before {
   background: #fff;
 }
 .bootstrap-table .fixed-table-container .fixed-table-footer {
